@@ -143,9 +143,10 @@ void amcatalog_remove_working_cmd(int pid);
 void amcatalog_remove_cmd(int id);
 int amcatalog_add_cmd(cmddata_t *cmddata);
 cmddata_t * amcatalog_get_cmd_from_id(int id);
+int         amcatalog_get_nb_image_cmd_for_storage(char *hostname, char *diskname, char *dump_timestamp, int level, char *dst_storage);
 GPtrArray * amcatalog_get_flush_cmd(void);
 GPtrArray * amcatalog_get_copy_cmd(void);
-gboolean amcatalog_holding_have_cmd(char *holding);
+gboolean    amcatalog_holding_have_cmd(char *holding);
 GHashTable *amcatalog_get_log_names(void);
 GHashTable *amcatalog_get_dump_list(void);
 GHashTable *amcatalog_get_parts(char *hostname, char *diskname);
